--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 android.defaults.buildfeatures.buildconfig=true
-android.nonFinalResIds=false
-android.nonTransitiveRClass=false
+android.nonFinalResIds=true
+android.nonTransitiveRClass=true
 android.useAndroidX=true
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.unsafe.configuration-cache=true
